// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/correspondences DELETE /:correspondenceId should delete a correspondence then undelete it 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "contactedAt": "2017-11-04T01:16:30.932Z",
        "isSyncedWithPms": false,
        "method": null,
        "note": "CareCru: Recall sent via email",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "2",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "60b59ea4-ab3b-4862-9c69-6488e40b0562",
      "type": "correspondence",
    },
  ],
}
`;

exports[`/api/correspondences GET /api/correspondences should fetch 1 correspondences 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "contactedAt": "2017-11-04T01:16:30.932Z",
        "isSyncedWithPms": false,
        "method": null,
        "note": "CareCru: Recall sent via email",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "2",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "60b59ea4-ab3b-4862-9c69-6488e40b0562",
      "type": "correspondence",
    },
  ],
}
`;

exports[`/api/correspondences GET /api/correspondences should fetch 2 correspondences with isSyncedWithPms false 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "contactedAt": "2017-11-02T00:14:30.932Z",
        "isSyncedWithPms": true,
        "method": null,
        "note": "CareCru: Recall sent via email",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "1",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "170c742b-232e-4000-a14d-7ef96c6f19c4",
      "type": "correspondence",
    },
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "contactedAt": "2017-11-04T01:16:30.932Z",
        "isSyncedWithPms": false,
        "method": null,
        "note": "CareCru: Recall sent via email",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "2",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "60b59ea4-ab3b-4862-9c69-6488e40b0562",
      "type": "correspondence",
    },
  ],
}
`;

exports[`/api/correspondences POST /api/correspondences /connector/batch - 1 invalid correspondence, 1 valid correspondence 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "contactedAt": "2017-11-05T01:16:30.932Z",
        "isSyncedWithPms": true,
        "note": "CareCru: Recall sent!",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "3",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "e9c58071-039c-4b46-b225-899a8b70a0b9",
      "type": "correspondence",
    },
  ],
}
`;

exports[`/api/correspondences POST /api/correspondences /connector/batch - 2 correspondences created successfully 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "contactedAt": "2017-11-05T01:16:30.932Z",
        "isSyncedWithPms": true,
        "note": "CareCru: Recall sent!",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "3",
        "pmsType": "MARKETING",
        "type": "recall:sent",
      },
      "id": "e9c58071-039c-4b46-b225-899a8b70a0b9",
      "type": "correspondence",
    },
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "contactedAt": "2017-11-03T01:16:30.932Z",
        "isSyncedWithPms": true,
        "note": "CareCru: Recall sent!",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "4",
        "pmsType": "MARKETING",
        "type": "reminder:sent",
      },
      "id": "ef80dda5-5e23-44ff-842a-888720dbb1b9",
      "type": "correspondence",
    },
  ],
}
`;

exports[`/api/correspondences PUT /api/correspondences/ /connector/batch - 1 correspondence updated 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "contactedAt": "2017-11-03T01:16:30.932Z",
        "isSyncedWithPms": true,
        "method": null,
        "note": "CareCru: Recall sent!",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "1",
        "pmsType": "Other",
        "type": "reminder:sent",
      },
      "id": "170c742b-232e-4000-a14d-7ef96c6f19c4",
      "type": "correspondence",
    },
  ],
}
`;
